src/app.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@layer base {
	.weblah-light-theme {
		--weblah-color-sb-primary: theme(colors.slate.50);
		--weblah-color-sb-secondary: theme(colors.slate.100);
		--weblah-color-sb-tertiary: theme(colors.slate.200);

		--weblah-color-sf-primary: theme(colors.slate.900);
		--weblah-color-sf-secondary: theme(colors.slate.500);
		--weblah-color-sf-tertiary: theme(colors.slate.400);

		--weblah-color-ss-primary: theme(colors.slate.300);
		--weblah-color-ss-secondary: theme(colors.slate.300 / 60%);
	}

	.weblah-dark-theme {
		--weblah-color-sb-primary: theme(colors.slate.950);
		--weblah-color-sb-secondary: theme(colors.slate.900);
		--weblah-color-sb-tertiary: theme(colors.slate.800);

		--weblah-color-sf-primary: theme(colors.slate.100);
		--weblah-color-sf-secondary: theme(colors.slate.400);
		--weblah-color-sf-tertiary: theme(colors.slate.500);

		--weblah-color-ss-primary: theme(colors.slate.700);
		--weblah-color-ss-secondary: theme(colors.slate.700 / 60%);
	}

	:root {
		@apply weblah-light-theme;
	}

	:is([data-weblah-color-scheme='dark'] *) {
		@apply weblah-dark-theme;
	}

	@media (prefers-color-scheme: dark) {
		:not([data-weblah-color-scheme='light'] *) {
			@apply weblah-dark-theme;
		}
	}
}

@layer utilities {
	.rich-text {
		@apply prose prose-slate max-w-none dark:prose-invert;
		@apply prose-p:my-0 prose-p:leading-tight prose-code:before:content-[''] prose-code:after:content-[''];
		@apply [&_span[data-weblah-brt=underline]]:underline;
	}
}

